--- a/sales-agent-dashboard.html
+++ b/sales-agent-dashboard.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sales Agent Page</title>
-    <Link rel="stylesheet" href="/sales-agent-dashboard.css">    </Link>
+    <title>salesagent page</title>
+    <Link rel="stylesheet" href="assets/css/manager-dashboard.css">    </Link>
   </head>
   <body>
-    <h1>Sales Agent Dashboard!</h1>
-    <p>We're glad to have you here.</p><a href="/logout">Logout</a>
+    <h1>salesagent Dashboard!</h1>
+    <p>We're glad to have you here.</p><a href="/all-users-page">See All sales</a><a href="/all-stock-page">Creditsales</a><a href="/add-stock-page">Add New sales</a><a href="/logout">Logout</a>
   </body>
 </html>
