--- a/manager-dashboard.html
+++ b/manager-dashboard.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Manager Page</title>
-    <Link rel="stylesheet" href="/manager-dashboard.css">    </Link>
+    <Link rel="stylesheet" href="assets/css/manager-dashboard.css">    </Link>
   </head>
   <body>
     <h1>Manager Dashboard!</h1>
