updated edit user.htmlt

--- a/index.html
+++ b/index.html
@@ -244,9 +244,9 @@
               </div><!-- Menu Item -->
 
               <div class="col-lg-4 menu-item">
-                <img src="assets/img/produce/Sorghum.jpg"
+                <img src="assets/img/produce/pilua rice.jpg"
                     class="menu-img img-fluid" alt=""></a>
-                <h4>sorghum</h4>
+                <h4>pilau Rice</h4>
                
                 <p class="qunatity">
                   8oookg
