--- a/adduser.html
+++ b/adduser.html
@@ -53,15 +53,15 @@
             <nav id="navmenu" class="navmenu">
                 <ul>
                     <button class="button">
-                        <li><a href="#hero" class="active">Home<br></a></li>
+                        <li><a href="index.html" class="active">Home<br></a></li>
                     </button>
 
                     <button class="button">
-                        <li><a href="../login.html">signin</a></li>
+                        <li><a href="login.html">signin</a></li>
                     </button>
 
                     <button class="button">
-                        <li><a href="/Yummy/signup.html">register</a></li>
+                        <li><a href="wsignup.html">register</a></li>
                     </button>
 
                     <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
