--- a/all-users.html
+++ b/all-users.html
@@ -12,7 +12,7 @@
     <header>
         <nav>
             <ul>
-                <li><a href="login.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="Stock.html">Stocks</a></li>
                 <li><a href="user.html">All-user-Page</a></li>
                 <li><a href="Logout.html">Logout</a></li>
