updated credit sales and branch details

--- a/creditsaleslist.html
+++ b/creditsaleslist.html
@@ -21,7 +21,7 @@
     </header>
 
     <section class="credit-sales-section">
-        <h2>Credit Sales</h2>
+        <h2>Credit Sales List</h2>
         <table class="credit-sales-table">
             <thead>
                 <tr>
