added credit sales

--- a/makesales.html
+++ b/makesales.html
@@ -10,9 +10,9 @@
     <header class="header">
         <h1>Happy Hoe Grocery Store Sales</h1>
         <nav class="navbar">
-            <a href="sales-agent-dashboard.html">Sales-agent-dashboard</a>
-            <a href="stocklist.html">Stock</a>
-            <a href="makesale.html">Make Sales</a>
+            <a href="yummy/sales-agent-dashboard.html">Sales-agent-dashboard</a>
+            <a href="yummy/stocklist.html">Stock</a>
+            <a href="yummy/makesale.html">Make Sales</a>
             <a href="logout.html">Logout</a>
         </nav>
     </header>
