--- a/creditsaleslist.html
+++ b/creditsaleslist.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Credit Sales - Happy Hoe Grocery Store</title>
-    <link rel="stylesheet" href="assets/css/credit-sales.css">
+    <link rel="stylesheet" href="assets/css/creditsaleslist.css">
 </head>
 <body>
     <header>
