--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Dashboard</title>
-    <link rel="stylesheet" href="/admin-dashboard.css">
+    <link rel="stylesheet" href="assets/css/admin-dashboard.css">
 </head>
 <body>
     <!-- Sidebar -->
@@ -13,8 +13,8 @@
         <ul>
             <li><a href="#">Dashboard</a></li>
             <li><a href="#">Users</a></li>
-            <li><a href="#">Reports</a></li>
-            <li><a href="#">Settings</a></li>
+            <li><a href="#">Register</a></li>
+            <li><a href="#">logout</a></li>
         </ul>
     </div>
 
@@ -31,9 +31,9 @@
 
         <!-- Dashboard Content -->
         <div class="dashboard">
-            <div class="card">Content 1</div>
-            <div class="card">Content 2</div>
-            <div class="card">Content 3</div>
+            <div class="card">Stock-list</div>
+            <div class="card">Saleslist</div>
+            <div class="card">Creditsaleslist</div>
         </div>
     </div>
 
