--- a/all-users.html
+++ b/all-users.html
@@ -49,13 +49,13 @@
                     <tr>
                         <td>#12345</td>
                         <td>2024-08-01</td>
-                        <td>5000kg</td>
+                        <td>50000Tonnes</td>
                         <td>Delivered</td>
                     </tr>
                     <tr>
                         <td>#12346</td>
                         <td>2024-08-15</td>
-                        <td>7500kg</td>
+                        <td>7500Tonnes</td>
                         <td>Pending</td>
                     </tr>
                 </tbody>
