--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                 <img src="assets/img/produce/Beans.jpg" class="menu-img img-fluid" alt=""></a>
                 <h4>Beans</h4>
                 <p class="qunatity">
-                  595kg
+                  595 Tonnes
                 </p>
               </div><!-- Menu Item -->
 
@@ -139,7 +139,7 @@
                 <h4>Grain-maize</h4>
 
                 <p class="qunatity">
-                  1495kg
+                  1495Tonnes
                 </p>
               </div><!-- Menu Item -->
 
@@ -148,7 +148,7 @@
                 <h4>Cowpeas</h4>
 
                 <p class="qunatity">
-                  895kg
+                  895Tonnes
                 </p>
               </div><!-- Menu Item -->
 
@@ -157,7 +157,7 @@
                 <h4>G-nuts</h4>
 
                 <p class="qunatity">
-                  1295kg
+                  1295Tonnes
                 </p>
               </div><!-- Menu Item -->
 
@@ -166,7 +166,7 @@
                 <h4>Rice</h4>
 
                 <p class="qunatity">
-                  1296kg
+                  1296Tonnes
                 </p>
               </div><!-- Menu Item -->
 
@@ -175,7 +175,7 @@
                 <h4>Soybeans</h4>
 
                 <p class="qunatity">
-                  995kg
+                  995Tonnes
                 </p>
               </div><!-- Menu Item -->
               <footer id="footer" class="footer dark-background">
