--- a/branchdetails.html
+++ b/branchdetails.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Branch Details-HHG Store</title>
+    <title>Branch Details-HHG Storew</title>
     <link rel="stylesheet" href="assets/css/branchdetails.css">
 </head>
 <body>
