--- a/sales-agent-dashboard.html
+++ b/sales-agent-dashboard.html
@@ -7,7 +7,7 @@
     <Link rel="stylesheet" href="assets/css/manager-dashboard.css">    </Link>
   </head>
   <body>
-    <h1>sawlesagent Dashboard!</h1>
+    <h1>salesagent Dashboard!</h1>
     <p>We're glad to have you here.</p><a href="/all-users-page">See All sales</a><a href="/all-stock-page">Creditsales</a><a href="/add-stock-page">Add New sales</a><a href="/logout">Logout</a>
   </body>
 </html>
