added more files in public folder

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           </button>
 
           <button class="button">
-            <li><a href="/Yummy/signup.html">register</a></li>
+            <li><a href="/signup">register</a></li>
           </button>
           <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
@@ -72,7 +72,7 @@
 
     <!-- Hero Section -->
     <section id="hero" class="hero section"
-      style="background-image: url(assets/img/produce/home.jpg);background-attachment: fixed;background-position: center;background-repeat: no-repeat;background-size: cover;color: white;">
+      style="background-image: url(public/img/produce/home.jpg);background-attachment: fixed;background-position: center;background-repeat: no-repeat;background-size: cover;color: white;">
 
       <div class="container">
         <div class="row gy-4 justify-content-center justify-content-lg-between">
