--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
     <!-- Hero Section -->
     <section id="hero" class="hero section"
-      style="background-image: url(public/img/produce/home.jpg);background-attachment: fixed;background-position: center;background-repeat: no-repeat;background-size: cover;color: white;">
+      style="background-image: url();background-attachment: fixed;background-position: center;background-repeat: no-repeat;background-size: cover;color: white;">
 
       <div class="container">
         <div class="row gy-4 justify-content-center justify-content-lg-between">
